[package]
name = "hw2_rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
prost = "0.13.3"
rand = "0.8.5"
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.12.3"

[build-dependencies]
tonic-build = "0.12.3"
